[package]
name = "nobody-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.1"
itertools = "0.12.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
shellexpand = "3.1.0"
solana-account-decoder = "1.18.0"
solana-cli-config = "1.18.0"
structopt = "0.3.26"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"
tempfile = "3.9.0"
reqwest = "0.11.23"
chrono = "0.4.33"
time = "0.3.31"
plotters = "0.3.5"
