[package]
name = "nobody-cli"
version = "0.2.0"
description = "nobody cli tool integrated with solana"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.1"
itertools = "0.12.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
shellexpand = "3.1.0"
solana-account-decoder = "1.18.0"
solana-transaction-status = "1.18.0"
solana-cli-config = "1.18.0"
structopt = "0.3.26"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

jupiter-swap-api-client = "0.1.0"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"
tempfile = "3.9.0"
reqwest = "0.11.23"
chrono = "0.4.33"
time = "0.3.31"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
arrayref = "0.3.7"
bs58 = "0.5.0"
regex = "1"
colorful = "0.2.2"
csv = "1.3.0"
raydium-library = { git = "https://github.com/raydium-io/raydium-library.git" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
